[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "qcmanybody"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="bpp4@vt.edu" },
  { name="Lori A. Burns", email="lori.burns@gmail.com" },
]
description='QCManyBody'
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "qcelemental",
    "qcengine",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "zstandard",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "tabulate",
]


[tool.setuptools.package-data]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCManyBody"
"Bug Tracker" = "https://github.com/MolSSI/QCManyBody/issues"


[tool.black]
line-length = 120


[tool.setuptools_scm]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--import-mode=importlib"
pythonpath = [
    "tests",
]
testpaths = [
    "tests",
]
markers = [
    "addon: tests require external non-required software",

    "cfour: tests using CFOUR software; skip if unavailable",
    "nwchem: tests using classic NWChem software; skip if unavailable",
    "psi4: tests using Psi4 software; skip if unavailable",
]
